# ML_train

./: .gitignore  404.html  LICENSE  README.md  index.html  linear_regression.html  logistic_regression.html  mkdocs.yml  requirements.html  requirements_mac.yml  requirements_test.yml  sitemap.xml  vim-markdown-preview.html
.github/workflows/: tests.yml
codes/: linear_regression_R.ipynb  linear_regression_py.ipynb
codes/.ipynb_checkpoints/: linear_regression_R-checkpoint.ipynb  linear_regression_py-checkpoint.ipynb
codes/data/: LICENSE
codes/haskell_logistic/: config.json  data.csv  data2.csv  logistic.cabal
codes/haskell_logistic/app/: Main.hs
codes/haskell_logistic/src/: DataLoader.hs  LogisticRegression.hs  Main.hs
codes/modules/: lin_reg.py  testLinReg.py  test_lin_reg.py
codes/modules/.ipynb_checkpoints/: LinReg-checkpoint.py
docs/: index.md  linear_regression.md  logistic_regression.md  requirements.md
docs/javascripts/: mathjax.js
search/: search_index.json
