cabal-version:       2.2
name:                logistic
version:             0.1.0.0
build-type:          Simple

executable logistic
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       DataLoader
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       random
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
