cabal-version:       2.2
name:                logistic
version:             0.1.0.0
build-type:          Simple

library
  hs-source-dirs:      src
  exposed-modules:     DataLoader,
                       LogisticRegression
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       random,
                       split,

executable logistic
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       logistic,
                       aeson,
                       bytestring,
                       text
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wredundant-constraints
